--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="pincode">Pincode</string>
     <string name="check_default">Make this my default address</string>
     <string name="demo_address">Harshit Singh\nHouse No. 12 B, Grand Aveneue, \nNoida, Uttar Pradesh, \n 201301</string>
+    <string name="your_address">Your address book is blank</string>
+    <string name="kindly_add_address">Kindly add shipping / billing\n address and enjoy faster\n checkout</string>
 </resources>
